(library
 (name jaml_lib)
 (public_name JaML.Lib)
 (modules
  Ast
  Parser
  Ty
  Typedtree
  Inferencer
  Pprintty
  Pprinttypedtree
  Pprinttopleveltree
  Pprintanf
  Lambdalift
  Closure
  LL_ast
  Anf
  Anfconv
  Monads
  Jamlstdlib)
 (modules_without_implementation LL_ast Anf)
 (libraries base angstrom)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq))
 (inline_tests))

(rule
 (alias runtest)
 (deps Makefile test_runtime.c runtime.c runtime.h)
 (action
  (run make run)))

(rule
 (deps runtime.h runtime.c stdlib.c)
 (targets jaml-runtime.so)
 (action
  (run gcc -fPIC -shared %{deps} -o %{targets})))
